{
    "name": "Joystick Controls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b19e0dab-a671-44ed-82fe-4685d95bac2f",
            "actions": [
                {
                    "name": "Thruster",
                    "type": "Value",
                    "id": "825ef9d8-38c9-4acb-9f8a-c942d7a3f492",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Joystick",
                    "type": "Value",
                    "id": "55f15aa1-b1bd-4272-ade6-6732766df884",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MaxSpeed1",
                    "type": "Button",
                    "id": "6760b65e-d97e-4310-b936-04749eae813e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MaxSpeed2",
                    "type": "Button",
                    "id": "c8ecf94c-f9db-4470-9315-32bdd1bbd993",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MaxSpeed3",
                    "type": "Button",
                    "id": "bee8050c-291c-47b8-a04d-64916dbbd152",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "51eb7f95-0770-4e02-90e4-985cc5231c0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "393fbfd6-f0b1-42fa-967c-1ada682717c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "7a84a8cd-12e8-4cd2-80c8-64388557173c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "55309688-7867-443a-ab1d-ea7bbc31ea71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResetScene",
                    "type": "Button",
                    "id": "d0ec507a-4388-476e-a3cd-0c957c3acb3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eefd3f16-81dc-47d4-8a4e-4de7f908ae13",
                    "path": "<HID::Thrustmaster T.16000M>/slider",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thruster",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69d4ded2-f0cb-4b2c-b7cd-8b420b6d8b2d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thruster",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "212fc295-4a4a-4680-8632-ac798b256376",
                    "path": "<HID::Mad Catz Saitek Pro Flight X-56 Rhino Throttle>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thruster",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da639a3b-cfa5-4d26-b0b6-4a3ee37b3f97",
                    "path": "<HID::Thrustmaster T.16000M>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eac62991-5088-4646-b45d-65b4d1513d89",
                    "path": "<HID::Mad Catz Saitek Pro Flight X-56 Rhino Stick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d20de8e4-ab20-4d82-88de-704077ef7d21",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MaxSpeed1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08140320-a55e-4700-b275-cf35a8eac1c8",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MaxSpeed2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33513ea6-4eca-4852-a9be-6ace452d59f1",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MaxSpeed3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ce7fb52-aba2-40e4-bed2-5b7e09d43a61",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fb8398b-c79b-4620-9a7b-82f65b763f2a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f7620ac-79fc-4120-93c7-064b49391481",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "500fb981-749c-4163-a54d-61e6764a947e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3c833da-4da9-48bf-ace8-034fc16586f2",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73c59498-5f23-4d63-bd5b-ee4e2cf9c51a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb22c93c-6762-4918-92f5-452c529cb665",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}